--- a/app/src/main/res/layout/fragment_questions_list.xml
+++ b/app/src/main/res/layout/fragment_questions_list.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context=".ui.regesteration_questions_form.QuestionsFragment"
+        tools:context=".ui.main_questions_form.QuestionsFragment"
         tools:listitem="@layout/questions_row" />
 
     <LinearLayout
