--- a/app/src/main/res/layout/fragment_questions_list.xml
+++ b/app/src/main/res/layout/fragment_questions_list.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout2"
+    android:id="@+id/Layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,12 +10,12 @@
         android:id="@+id/list"
         android:name="com.muslims.firebasemvvm.ui.regesteration_questions_form.QuestionsFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logoImage"
         tools:context=".ui.main_questions_form.QuestionsFragment"
         tools:listitem="@layout/questions_row" />
 
@@ -34,8 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:alpha="0.5"
+            android:layout_weight="2"
             android:text="السابق" />
 
         <Button
@@ -46,5 +45,15 @@
             android:layout_weight="1"
             android:text="أقسم بالله على ذلك" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/logoImage"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
