finished RegisterationFragment.kt

--- a/app/src/main/res/layout/question_row_numeric_input.xml
+++ b/app/src/main/res/layout/question_row_numeric_input.xml
@@ -51,9 +51,10 @@
         android:background="@drawable/question_text_background"
         android:gravity="top|start"
         android:hint="@string/your_answer"
-        android:inputType="textMultiLine"
-        android:lines="3"
-        android:maxLines="5"
+        android:inputType="numberSigned"
+        android:lines="8"
+        android:maxLines="15"
+        android:minLines="2"
         android:padding="8dp"
         android:scrollbars="vertical"
         android:textDirection="rtl"
