--- a/app/src/main/res/drawable/man_or_woman_images_border.xml
+++ b/app/src/main/res/drawable/man_or_woman_images_border.xml
@@ -8,5 +8,5 @@
         android:bottomLeftRadius="0dp" />
     <stroke
         android:width="3dp"
-        android:color="@android:color/holo_green_dark" />
+        android:color="@color/blue_300" />
 </shape>
