--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -41,13 +41,13 @@
                 android:layout_height="@dimen/spacing_middle" />
 
             <com.muslims.firebasemvvm.utils.AnimatedTextView
+                android:id="@+id/login_text_view_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/login_text_view_logo"
                 android:layout_gravity="center"
-                app:fontFamily="@font/logo_font"
                 android:textColor="@color/colorPrimary"
-                android:textSize="44sp"/>
+                android:textSize="44sp"
+                app:fontFamily="@font/logo_font" />
 
             <View
                 android:layout_width="0dp"
@@ -56,9 +56,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/spacing_medium"
                 android:text="مرحبا بعودتك"
-                android:layout_gravity="center"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:textColor="@color/blue_grey_800"
                 android:textStyle="bold" />
@@ -66,9 +66,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/spacing_medium"
                 android:text="قم بتسجيل الدخول الان"
-                android:layout_gravity="center"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/blue_grey_300"
                 android:textStyle="bold" />
@@ -81,8 +81,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="البريد الإلكتروني"
                 android:layout_gravity="right|end"
+                android:text="البريد الإلكتروني"
                 android:textAlignment="center"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:textColor="@color/blue_grey_800"
@@ -107,12 +107,11 @@
                 android:layout_height="@dimen/spacing_mlarge" />
 
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="كلمة السر"
                 android:layout_gravity="right|end"
+                android:text="كلمة السر"
                 android:textAlignment="center"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:textColor="@color/blue_grey_800"
@@ -135,11 +134,12 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="@dimen/spacing_middle" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="رقم الهاتف"
                 android:layout_gravity="right|end"
+                android:text="رقم الهاتف"
                 android:textAlignment="center"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:textColor="@color/blue_grey_800"
@@ -202,13 +202,14 @@
                 android:layout_marginTop="@dimen/spacing_medium"
                 android:gravity="center"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/btn_from_login_to_sign_up"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:alpha="0.5"
                     android:clickable="true"
                     android:text=" قم بإنشاء حسابك"
-                    android:alpha="0.5"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                     android:textColor="@color/purple_A400"
                     android:textStyle="bold" />
@@ -219,7 +220,6 @@
                     android:text="هل أنت جديد هنا"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                     android:textColor="@color/blue_grey_300" />
-
 
 
             </LinearLayout>
